# ImageAnnotation

./: .flake8  .gitignore  .pre-commit-config.yaml  img_click_script.py  pyproject.toml
annotateimg/: __init__.py  pointclick.py
pointclick/: __init__.py  img_inputpoints.py
scripts/: img_click_script.py
