[build-system]
requires = ["setuptools>=50.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "annotateimg"
version = "0.1.0"
description=""
readme = "README.md"
authors = [{ name = "My Name", email = "me@email.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  # "Operating System :: OS Independent",
]
dependencies = [
  "opencv-python",
  "matplotlib >= 3.3.1",
  "numpy >= 1.19.1",
  "scipy >= 1.5.2",
  "ipython"
]
